--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <title>lab 5</title>
         <script src="main.js"></script>
     </head>
     <body>
